sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:7: error: not found: value permutotion
    permutotion=0
    ^